--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <h4 class="text-center">⚠Pour commander prend en capture d'écran ce que tu veux et clique sur commander⚠</h4>
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <img src="/IMG/Chope ta puff.png" width="256" height="256" alt="">
+      <img src="https://chopetapuff.github.io/site/IMG/Chope ta puff.png" width="256" height="256" alt="">
     </div>
 
     <div class="container">
@@ -36,7 +36,7 @@
           <div class="card-body">
             <h1 class="card-title pricing-card-title">10€</h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li><img src="/IMG/puff-flex-2800-puffs-disposable-bars-vape.jpg" width="256" height="256" alt=""></li>
+              <li><img src="https://chopetapuff.github.io/site/IMG/puff-flex-2800-puffs-disposable-bars-vape.jpg" width="256" height="256" alt=""></li>
             </ul>
             <button type="button" onclick="location.replace('https://www.snapchat.com/add/chopetapuff44')" class="btn btn-lg btn-block btn-outline-primary">Commander</button>
           </div>
