--- a/tarifs.html
+++ b/tarifs.html
@@ -24,7 +24,7 @@
     </div>
     <h4 class="text-center">⚠Pour commander prend en capture d'écran ce que tu veux et clique sur commander⚠</h4>
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <img src="/IMG/Chope ta puff.png" width="256" height="256" alt="">
+      <img src="https://chopetapuff.github.io/site/IMG/Chope ta puff.png" width="256" height="256" alt="">
     </div>
 
     <div class="container">
