--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
       <h5 class="my-0 mr-md-auto font-weight-normal">Chope Ta Puff</h5>
       <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="/index.html">Accueil</a>
+        <a class="p-2 text-dark" href="/site/index.html">Accueil</a>
         <a class="p-2 text-dark" href="#">Catalogue</a>
-        <a class="p-2 text-dark" href="/tarifs.html">Tarifs</a>
+        <a class="p-2 text-dark" href="/site/tarifs.html">Tarifs</a>
       </nav>
     </div>
     <h4 class="text-center">⚠Pour commander prend en capture d'écran ce que tu veux et clique sur commander⚠</h4>
