--- a/tarifs.html
+++ b/tarifs.html
@@ -34,8 +34,8 @@
             <h4 class="my-0 font-weight-normal">Puff</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">À partir de 10€</h1>
-            <h1 class="card-title pricing-card-title">3+ pour 8€/unité</h1>
+            <h1 class="card-title pricing-card-title">À partir de 10€/unité</h1>
+            <h1 class="card-title pricing-card-title">À partir de 3 puffs et + pour 8€/unité</h1>
             <button type="button" onclick="location.replace('https://www.snapchat.com/add/chopetapuff44')" class="btn btn-lg btn-block btn-outline-primary">Commander</button>
           </div>
         </div>
