--- a/tarifs.html
+++ b/tarifs.html
@@ -35,7 +35,7 @@
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">À partir de 10€/unité</h1>
-            <h1 class="card-title pricing-card-title">À partir de 3 puffs et + pour 8€/unité</h1>
+            <h1 class="card-title pricing-card-title">À partir de 3 puffs et plus pour seulement 8€/unité</h1>
             <button type="button" onclick="location.replace('https://www.snapchat.com/add/chopetapuff44')" class="btn btn-lg btn-block btn-outline-primary">Commander</button>
           </div>
         </div>
